Partially done nav and Leftsidebar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,83 @@
 
 	</head>
 	<body>
+		<div class="wrapper">
+			<header>
+				<nav>
+					<div class="row">
+						<div class="col-md-3">
+							<div>
+								<h3>KARAOKEPARTY</h3>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="What do you want to sing?">
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div>
+								<ul class="nav nav-pills">
+									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown">country <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li>Flag1</li>
+										<li>Flag2</li>
+										<li>Flag3</li>	
+									</ul>
+									</li>
+									<li id="Login"><a href="#">Login</a></li>
+									<li id="SignUp"><a href="#">Sign Up</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</nav>
+			</header>
+			
+			<main>
+				<section id="content">
+					<div class="row">
+						<div class="col-md-3">
+							<div class="LeftSidebar">
+								<ul class="nav nav-pills nav-stacked">
+									<li id="homepage"><a href="#"><i class="fa fa-user"></i><p>HOMEPAGE</p></a></li>
+									<li id="songs"><a href="#">SONGS</a></li>
+									<li id="battles"><a href="#">BATTLES</a></li>
+									<li id="partymode"><a href="#">PARTYMODE</a></li>
+									<li id="quiz"><a href="#">QUIZ</a></li>
+									<li id="school"><a href="#">SCHOOL</a></li>
+									<li id="forums"><a href="#">FORUMS</a></li>
+									<li id="help"><a href="#">HELP</a></li>
+								</ul>
+							</div>							
+						</div>
+
+						<div class="col-md-9">
+							<div class="RightSidebar">
+								<div class="row">
+									<div class="col-md-12">
+										<div class="upper">
+											<p>upper</p>
+										</div>
+									</div>
+								</div>
+
+								<div class="row">
+									<div class="col-md-12">
+										<div class="lower">
+											<p>lower</p>
+										</div>
+									</div>
+								</div>
+							</div>														
+						</div>
+					</div>	
+						
+				</section>
+			</main>
+
+		</div>
+		
 
 		<!-- jQuery -->
 		<script src="assets/plugins/jquery/jquery.min.js"></script>
